test/spec/servicemesh_trafficsplit_fixture.yaml
apiVersion: v1
kind: Service
metadata:
  name: trafficsplit-spec
spec:
  ports:
  - port: 80
    targetPort: spec-web
  selector:
    app: trafficsplit-spec
---
apiVersion: v1
kind: Service
metadata:
  name: trafficsplit-spec-v1
spec:
  ports:
  - port: 80
    targetPort: spec-web
  selector:
    app: trafficsplit-spec
    version: v1
---
apiVersion: v1
kind: Service
metadata:
  name: trafficsplit-spec-v2
spec:
  ports:
  - port: 80
    targetPort: spec-web
  selector:
    app: trafficsplit-spec
    version: v2
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: trafficsplit-spec-v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: trafficsplit-spec
      version: v1
  template:
    metadata:
      labels:
        app: trafficsplit-spec
        version: v1
      annotations:
        'linkerd.io/inject': 'enabled'
    spec:
      containers:
        - image: traefik/whoami:latest
          name: trafficsplit-spec
          ports:
            - containerPort: 80
              name: spec-web
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: trafficsplit-spec-v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: trafficsplit-spec
      version: v2
  template:
    metadata:
      labels:
        app: trafficsplit-spec
        version: v2
      annotations:
        'linkerd.io/inject': 'enabled'
    spec:
      containers:
        - image: traefik/whoami:latest
          name: trafficsplit-spec
          ports:
            - containerPort: 80
              name: spec-web
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: trafficsplit-spec
spec:
  entryPoints:
    - websecure
  tls: {}
  routes:
    - kind: Rule
      middlewares:
        - name: trafficsplit-spec-l5-dst
      match: Host(`trafficsplit-spec.k3d.local.profitbricks.net`)
      services:
        - name: trafficsplit-spec
          port: 80
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: trafficsplit-spec-l5-dst
spec:
  headers:
    customRequestHeaders:
      l5d-dst-override: "trafficsplit-spec.default.svc.cluster.local:80"
---
apiVersion: split.smi-spec.io/v1alpha2
kind: TrafficSplit
metadata:
  name: trafficsplit-spec-split
  namespace: default
spec:
  service: trafficsplit-spec
  backends:
  - service: trafficsplit-spec-v1
    weight: 90
  - service: trafficsplit-spec-v2
    weight: 10
